[package]
name = "rvmti"
version = "0.1.0"
authors = ["rel-eng <rel-eng@yandex.ru>"]
license = "BSD-3-Clause"
license-file = "LICENSE"
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
log = "0.4.6"
env_logger = "0.6.0"
failure = "0.1.5"
failure_derive = "0.1.5"
backtrace = "0.3.13"
nix = "0.12.0"
libc = "0.2.46"
byteorder = "1.2.7"
rand = "0.6.4"
chrono = "0.4.6"

[dependencies.rvmti-sys]
path = "rvmti-sys"
version = "0.1.0"

[lib]
name = "rvmti"
crate-type = ["cdylib"]

[profile.dev]
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'unwind'
