[package]
name = "rvmti"
version = "0.1.0"
authors = ["rel-eng <rel-eng@yandex.ru>"]
license = "BSD-3-Clause"
license-file = "LICENSE"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
env_logger = "0.7.1"
nix = "0.17.0"
libc = "0.2.69"
byteorder = "1.3.4"
rand = "0.7.3"
chrono = "0.4.11"
thiserror = "1.0.16"

[dependencies.rvmti-sys]
path = "rvmti-sys"
version = "0.1.0"

[lib]
name = "rvmti"
crate-type = ["cdylib"]

[profile.dev]
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'unwind'
