[package]
authors = ["rel-eng <rel-eng@yandex.ru>"]
build = "build.rs"
description = "Low-level bindings"
include = ["build.rs", "src/**/*", "Cargo.toml"]
license = "BSD-3-Clause"
license-file = "LICENSE"
name = "rvmti-sys"
version = "0.1.0"

[build-dependencies]
bindgen = "0.40.0"
cc = "1.0.24"
log = "0.4.5"
env_logger = "0.5.13"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
